Individual and global quality indexes improved
improved overall and aggregate quality indexes.

Added a script to iterate through multiple records showing their global index.

Added a global debug variable to display detailed information.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 DSQI/dsqi.m
+Pruebas_dsqi/IndexCalculation.asv
+Pruebas_dsqi/IndexForCompleteSignal.asv
+Pruebas_dsqi/IndexCalculation.asv
+Pruebas_dsqi/IndexCalculation.asv
