added error handling in index calculations
If the heartbeat detector fails because there is no heartbeats, if the signal is completely constant and any of the indices based on power or kurtosis of Nan, as well as other corner cases are now properly managed.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Pruebas_dsqi/IndexCalculation.asv
 Pruebas_dsqi/IndexForCompleteSignal.asv
 Pruebas_dsqi/IndexCalculation.asv
 Pruebas_dsqi/IndexCalculation.asv
+Pruebas_dsqi/ECG13-03-8H.txt
+Pruebas_dsqi/AssignValueToIndexes.asv
+Pruebas_dsqi/IndexForSignalWindows.asv
