Added code for calculating confidence intervals
Added code for calculation of confidence intervals estimated from differences between means and medians of the distributions from Bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ Pruebas_dsqi/IndexCalculation.asv
 Pruebas_dsqi/ECG13-03-8H.txt
 Pruebas_dsqi/AssignValueToIndexes.asv
 Pruebas_dsqi/IndexForSignalWindows.asv
+2_AcceptableFiles.ods
+*.ods
+*.txt
+Pruebas_dsqi/AcceptableFiles.txt
